_archive/content-services/3.4/references/API-JS-Services.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: [Services, API/Script, JavaScript API]
option: [JavaScript API, Services API]
---

# Services API

This section describes the Alfresco JavaScript Services API.

-   **[Site service](../references/API-JS-SiteService.md)**  
A site is a collaborative area for a unit of work or a project.
-   **[Activities service](../references/API-JS-Activities.md)**  
Activities refer to updates to content within a site, including uploaded files, blogs, discussions, calendars, and the team wiki. The methods available for the Activities service are grouped into the `Post activity` and `Feed controls`object types.
-   **[Tagging service](../references/API-JS-Tagging.md)**  

-   **[Thumbnail services](../references/API-JS-ThumbnailService.md)**  
A thumbnail is a transformation of content into a specified destination MIME type. This is most commonly an image of a particular size, but can also be other things, for example, a Flash rendition. The Thumbnail service transforms and maintains this thumbnail.
-   **[Rendition services](../references/API-JS-RenditionService.md)**  
A rendition is an alternative representation of a content node. Renditions are derived from their source nodes and are usually updated automatically when their source node is updated.
-   **[Authority service](../references/API-JS-AuthorityService.md)**  

-   **[Workflow service](../references/API-JS-WorkflowService.md)**  
The Workflow JavaScript API lets you access Alfresco advanced workflows from within JavaScript.

**Parent topic:**[Alfresco Repository JavaScript API](../concepts/API-JS-intro.md)

